--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.77MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-176.2KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-16.42MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-918.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-9.44MB/s(Youtube:不良林), server: 36.139.166.64, port: 2601, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
-  - {name: 伊朗-191.3KB/s(Youtube:不良林), server: de.v2yyds.com, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: de.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6f5e02bd-9b8f-44bc-b681-55150c102911, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.18MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-398.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇳🇱 荷兰-2.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-427.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-344.5KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林), server: cnus.v2yyds.cc, port: 32913, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: cnus.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-379.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇳🇱 荷兰-375.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇩🇪 德国-1.33MB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
-      - 伊朗-191.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-398.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-427.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-379.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-375.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
