--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-339.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.208, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林), server: cnus.v2yyds.cc, port: 32913, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: cnus.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-631.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇳🇱 荷兰-2.26MB/s(Youtube:不良林), server: 213.183.59.211, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-3.82MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6f5e02bd-9b8f-44bc-b681-55150c102911, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.56MB/s(Youtube:不良林), server: 36.139.154.148, port: 21102, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.154.148}}
+  - {name: 🇨🇳 中国-16.60MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-214.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.59MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35211, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-339.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-5.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-588.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-886.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-631.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-214.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
